Fixing logo on mobile

--- a/themes/hiker/source/css/home.css
+++ b/themes/hiker/source/css/home.css
@@ -2,7 +2,7 @@
 body{
 	width:100%;
 	height:100%;
-	padding: 0; 
+	padding: 0;
 	margin: 0;
 }
 
@@ -110,14 +110,14 @@ html{
 	-o-background-size: cover;
 }
 
-.blur{	
+.blur{
     filter: url(blur.svg#blur); /* FireFox, Chrome, Opera */
-    
+
     -webkit-filter: blur(5px); /* Chrome, Opera */
        -moz-filter: blur(5px);
-        -ms-filter: blur(5px);    
+        -ms-filter: blur(5px);
             filter: blur(5px);
-    
+
     filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius=5, MakeShadow=false); /* IE6~IE9 */
 }
 
@@ -147,7 +147,7 @@ html{
 	letter-spacing: 9px;
 	text-transform: uppercase;
 }
-    
+
 .thumb{
 	display: block;
     height: auto;
@@ -164,13 +164,13 @@ html{
 	opacity: 0.95;
 }
 .image{
-	height: 200px; 
-	width: auto; 
+	height: 200px;
+	width: auto;
 	overflow: hidden;
 }
 .image>img{
-	height: 100%; 
-	width: 100%; 
+	height: 100%;
+	width: 100%;
 	display: block;
 }
 
@@ -229,6 +229,10 @@ footer>.container>.row>p>a:hover  {
 	.navigater-list>a {
 		padding: 5px;
 		line-height: 40px;
+	}
+	.homelogo {
+		width: 80% !important;
+		margin-left: -40% !important;
 	}
 	.homelogoback>h1>a {
 		font-size: 20px;
